--- a/src/partials/footer.jade
+++ b/src/partials/footer.jade
@@ -15,6 +15,5 @@ mixin footer
 				li
 					a(href="https://mozilla.org/privacy-policy.html") Privacy Policy	
 
-	script(src="assets/lib/jquery/dist/jquery.min.js")
-	script(src="assets/lib/bootstrap/dist/js/bootstrap.min.js")
+	script(src="assets/js/vendor.js")
 	script(src="assets/js/main.js")
