--- a/src/partials/head.jade
+++ b/src/partials/head.jade
@@ -11,6 +11,5 @@ mixin head(pageTitle)
 
 	// stylesheet
 	link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800")
-	link(rel="stylesheet" href="assets/lib/bootstrap/dist/css/bootstrap.min.css")
-	link(rel="stylesheet" href="assets/lib/mozilla-tabzilla/css/tabzilla.css")
+	link(rel="stylesheet" href="assets/css/vendor.css")
 	link(rel="stylesheet" href="assets/css/main.css")
