--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,6 @@
-@import 'var';
-@import 'reset';
-@import 'utilities';
-@import 'header';
-@import 'page';
-@import 'footer';
+@import 'partials/var';
+@import 'partials/reset';
+@import 'partials/utilities';
+@import 'partials/header';
+@import 'partials/page';
+@import 'partials/footer';
